feat: add auth, create get list delete app by user id, swagger
