# main.go
@@ -10,21 +10,29 @@ import (
 	"example.com/task-management-app/router"
 	"example.com/task-management-app/service"
 	"example.com/task-management-app/usecase"
-
-	ginSwagger "github.com/swaggo/gin-swagger"
-
-	swaggerFiles "github.com/swaggo/files"
+	"github.com/gin-gonic/gin"
 )
 
-// @title Task Management API
+// @title Task Management App APIs
+// @version 1.0
+// @description Task Management App Swagger APIs.
+// @host localhost:8080
+// @BasePath /task-management-app
+// @schemes http
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
-	initiateApp()
-}
-
-func initiateApp() {
-
 	// parsing envar
 	appConfig := config.ParseConfig()
+
+	app := initiateApp(appConfig)
+	if err := app.Run(":8080"); err != nil {
+		log.Fatalf("http listen failed!")
+	}
+}
+
+func initiateApp(appConfig *config.Config) *gin.Engine {
 
 	// create new client of postgreSql
 	db, err := repository.NewPostgreClient(*appConfig)
@@ -42,13 +50,17 @@ func initiateApp() {
 	// handler
 	taskHandler := handler.NewTaskHandler(taskUsecase)
 
+	// Initiate User dependencies
+	// repository
+	userRepository := repository.NewUserRepository(db)
+	userService := service.NewUserService(userRepository)
+	userUsecase := usecase.NewUserUsecase(userService)
+	userHandler := handler.NewUserHandler(userUsecase)
+
 	// setup router
-	router := router.SetupRouter(router.Routes{TaskHandler: taskHandler})
-
+	router := router.NewRouter(router.Routes{Config: *appConfig, TaskHandler: taskHandler, UserHandler: userHandler})
 	// wip: swagger
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	// router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	// run app
-	router.Run()
-
+	return router
 }
